public class Main {
    public static void main(String[] args) {
        AuthManager authManager = new AuthManager();
        authManager.start();
    }
}